--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -8,18 +8,44 @@
 </head>
 <body>
     <div class="scene">
-        <div class="flower-container">
+        <div class="bouquet">
+            <!-- Flor 1 -->
             <div class="flower">
-                <div class="petal petal1"></div>
-                <div class="petal petal2"></div>
-                <div class="petal petal3"></div>
-                <div class="petal petal4"></div>
-                <div class="petal petal5"></div>
-                <div class="center"></div>
+                <div class="stem"></div>
+                <div class="flower-head">
+                    <div class="petal petal1"></div>
+                    <div class="petal petal2"></div>
+                    <div class="petal petal3"></div>
+                    <div class="petal petal4"></div>
+                    <div class="center"></div>
+                </div>
+            </div>
+
+            <!-- Flor 2 -->
+            <div class="flower">
+                <div class="stem"></div>
+                <div class="flower-head">
+                    <div class="petal petal1"></div>
+                    <div class="petal petal2"></div>
+                    <div class="petal petal3"></div>
+                    <div class="petal petal4"></div>
+                    <div class="center"></div>
+                </div>
+            </div>
+
+            <!-- Flor 3 -->
+            <div class="flower">
+                <div class="stem"></div>
+                <div class="flower-head">
+                    <div class="petal petal1"></div>
+                    <div class="petal petal2"></div>
+                    <div class="petal petal3"></div>
+                    <div class="petal petal4"></div>
+                    <div class="center"></div>
+                </div>
             </div>
         </div>
     </div>
     <script src="app.js"></script>
 </body>
 </html>
-
