--- a/index.html
+++ b/index.html
@@ -1,49 +1,75 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramo de Flores 3D</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Flower Animation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="scene">
-        <div class="bouquet">
-            <!-- Flor 1 -->
-            <div class="flower">
-                <div class="stem"></div>
-                <div class="flower-head">
-                    <div class="petal petal1"></div>
-                    <div class="petal petal2"></div>
-                    <div class="petal petal3"></div>
-                    <div class="petal petal4"></div>
-                    <div class="center"></div>
-                </div>
+<body class="not-loaded">
+    <div class="night"></div>
+    <div class="flowers">
+        <div class="flower flower--1">
+            <div class="flower__leafs flower__leafs--1">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__white-circle"></div>
+                <div class="flower__light flower__light--1"></div>
+                <div class="flower__light flower__light--2"></div>
+                <div class="flower__light flower__light--3"></div>
+                <div class="flower__light flower__light--4"></div>
+                <div class="flower__light flower__light--5"></div>
+                <div class="flower__light flower__light--6"></div>
+                <div class="flower__light flower__light--7"></div>
+                <div class="flower__light flower__light--8"></div>
             </div>
-
-            <!-- Flor 2 -->
-            <div class="flower">
-                <div class="stem"></div>
-                <div class="flower-head">
-                    <div class="petal petal1"></div>
-                    <div class="petal petal2"></div>
-                    <div class="petal petal3"></div>
-                    <div class="petal petal4"></div>
-                    <div class="center"></div>
-                </div>
+            <div class="flower__line">
+                <div class="flower__line__leaf flower__line__leaf--1"></div>
+                <div class="flower__line__leaf flower__line__leaf--2"></div>
+                <div class="flower__line__leaf flower__line__leaf--3"></div>
+                <div class="flower__line__leaf flower__line__leaf--4"></div>
+                <div class="flower__line__leaf flower__line__leaf--5"></div>
+                <div class="flower__line__leaf flower__line__leaf--6"></div>
             </div>
-
-            <!-- Flor 3 -->
-            <div class="flower">
-                <div class="stem"></div>
-                <div class="flower-head">
-                    <div class="petal petal1"></div>
-                    <div class="petal petal2"></div>
-                    <div class="petal petal3"></div>
-                    <div class="petal petal4"></div>
-                    <div class="center"></div>
-                </div>
+        </div>
+        <div class="flower flower--2">
+            <div class="flower__leafs flower__leafs--2">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__white-circle"></div>
+                <div class="flower__light flower__light--1"></div>
+                <div class="flower__light flower__light--2"></div>
+                <div class="flower__light flower__light--3"></div>
+                <div class="flower__light flower__light--4"></div>
+                <div class="flower__light flower__light--5"></div>
+                <div class="flower__light flower__light--6"></div>
+                <div class="flower__light flower__light--7"></div>
+                <div class="flower__light flower__light--8"></div>
             </div>
+            <div class="flower__line">
+                <div class="flower__line__leaf flower__line__leaf--1"></div>
+                <div class="flower__line__leaf flower__line__leaf--2"></div>
+                <div class="flower__line__leaf flower__line__leaf--3"></div>
+                <div class="flower__line__leaf flower__line__leaf--4"></div>
+                <div class="flower__line__leaf flower__line__leaf--5"></div>
+                <div class="flower__line__leaf flower__line__leaf--6"></div>
+            </div>
+        </div>
+        <div class="flower flower--3">
+            <!-- Add content for new flower -->
+        </div>
+        <div class="flower flower--4">
+            <!-- Add content for new flower -->
+        </div>
+        <div class="flower flower--5">
+            <!-- Add content for new flower -->
+        </div>
+        <div class="flower flower--6">
+            <!-- Add content for new flower -->
         </div>
     </div>
     <script src="app.js"></script>
